# Zenith-ops

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  alembic.ini  pyproject.toml
.cursor/rules/: api.mdc  infra.mdc  tests.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  pull_request_template.md
.github/workflows/: ci.yml
docs/adr/: DDD-001-arquitectura.md
docs/context/: architecture.md  conventions.md  current-state.md
docs/specs/: SPEC-000-project-conventions.md  SPEC-001-predict-endpoint.md  _TEMPLATE.md
infra/docker/: Dockerfile  docker-compose.dev.yml
openspec/: config.yaml
openspec/changes/archive/2026-06-10-predict-endpoint/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-10-predict-endpoint/specs/: spec.md
openspec/changes/health-checks/: tasks.md  verify-report.md
openspec/changes/health-checks/specs/: spec.md
scripts/: generate_dummy_model.py
src/db/migrations/: env.py
src/zenith_ops/: __init__.py
src/zenith_ops/api/v1/: health.py  predict.py  test_feature.py
src/zenith_ops/core/: dummy_model.py  exceptions.py  inference_service.py  settings.py
tests/integration/: conftest.py  test_health.py  test_predict_endpoint.py
tests/unit/: test_exceptions.py  test_feature.py  test_health.py  test_inference_service.py  test_smoke.py
